# ZK-relief

./: .gitmodules  README.md  package-lock.json
contract/: Move.toml
contract/sources/: zkrelief.move
ecvrf/ecvrf_wasm_bindings/: Cargo.toml
ecvrf/ecvrf_wasm_bindings/example/: index.html
ecvrf/ecvrf_wasm_bindings/src/: lib.rs
frontend/zk-relief/: package-lock.json
frontend/zk-relief/app/: .env  .gitignore  package-lock.json  package.json  pnpm-lock.yaml
frontend/zk-relief/app/src/app/: globalContexts.tsx  page.tsx
frontend/zk-relief/app/src/app/all-counsellors/: page.tsx
frontend/zk-relief/app/src/app/api/zkp/get/: route.ts
frontend/zk-relief/app/src/app/auth/: page.tsx
frontend/zk-relief/app/src/app/hooks/: useGetOwnedObjects.ts  useSui.ts
frontend/zk-relief/app/src/app/pkg/: ecvrf_wasm_bindings.d.ts  ecvrf_wasm_bindings.js  ecvrf_wasm_bindings_bg.wasm  ecvrf_wasm_bindings_bg.wasm.d.ts  package.json
frontend/zk-relief/app/src/app/submit-report/: page.tsx
scripts/: run_ecvrf_demo.sh
vrf-api/: index.js  package-lock.json  package.json
zk-relief-clone/poc-zklogin/app/: package-lock.json
zk-relief-clone/poc-zklogin/app/src/app/auth/: page.tsx
