[package]
name = "ecvrf_wasm_bindings"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
fastcrypto = { path = "../fastcrypto/fastcrypto", features = ["wasm"] }
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
console_error_panic_hook = "0.1"
js-sys = "0.3"
bincode = "1.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]